--- a/less/nav.less
+++ b/less/nav.less
@@ -10,6 +10,7 @@ header{
         border-bottom-right-radius:15%;
         border-bottom: 3px solid @borders;
         top: 0%;
+        max-height: 19vh;
         };
         
         div{
