--- a/less/main.less
+++ b/less/main.less
@@ -1,18 +1,15 @@
 .colPicRight{
     background-color: @outerBox;
-    margin-top: 10%;
+    ;
     border-top: 2px solid @borders;
-    
-
     .flexOuterJAD(space-evenly, center, row);
-    margin: 9% 1%;
-    
+    margin: 1% 1%;
+    margin-top: 20vh;
     margin-bottom: 0%;
     background-color: @outerBox;
     .outer{
         width: 100%;
         .flexOuterJAD(space-around, center, row);
-        
         .innerT{
             width: 45%;
             padding: 2% 2%;
@@ -23,13 +20,10 @@
             p{
                 font-size: 3rem;
             }
-
         }
         .innerI{
-            width: 55%;
-            
-            background-color: @innerBox;
-            
+            width: 55%;           
+            background-color: @innerBox;           
         }
     };
 
@@ -38,15 +32,13 @@
 .colPicLeft{
     background-color: @outerBox;
     border-bottom-left-radius: 7%;
-
     .flexOuterJAD(space-evenly, center, row-reverse);
     margin: 1% 1%;
     margin-top: 0%;
     background-color: @outerBox;
     .outer{
         width: 100%;
-        .flexOuterJAD(space-around, center, row-reverse);
-        
+        .flexOuterJAD(space-around, center, row-reverse);       
         .innerT{
             width: 50%;
             padding: 2% 2%;
@@ -57,13 +49,10 @@
             p{
                 font-size: 3rem;
             }
-
         }
         .innerI{
-            width: 50%;
-            
-            background-color: @innerBox;
-            
+            width: 50%;            
+            background-color: @innerBox;           
         }
     };
 
@@ -71,8 +60,7 @@
 
 .threeCol{
     .flexOuterJAD(space-evenly, center, row);
-    margin: 1% 1%;
-    
+    margin: 1% 1%;    
     background-color: @outerBox;
     div{
         width: 32%;
