--- a/css/index.css
+++ b/css/index.css
@@ -169,6 +169,26 @@ header div {
   width: 49%;
   text-align: center;
 }
+@media (max-width: 500px) {
+  header h1 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 820px) {
+  header h1 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 500px) {
+  header h2 {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 820px) {
+  header h2 {
+    font-size: 2rem;
+  }
+}
 header nav {
   display: flex;
   justify-content: space-around;
@@ -188,6 +208,16 @@ header nav a {
 header nav a:hover {
   color: #f5dddd;
 }
+@media (max-width: 500px) {
+  header nav a {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 820px) {
+  header nav a {
+    font-size: 2rem;
+  }
+}
 footer {
   margin: 1%;
   text-align: center;
@@ -203,6 +233,11 @@ footer {
   margin-bottom: 0%;
   background-color: #3a4454;
 }
+@media (max-width: 820px) {
+  .colPicRight {
+    margin-top: 15vh;
+  }
+}
 .colPicRight .outer {
   width: 100%;
   display: flex;
@@ -210,23 +245,47 @@ footer {
   align-items: center;
   flex-direction: row;
 }
-.colPicRight .outer .innerT {
+@media (max-width: 820px) {
+  .colPicRight .outer {
+    flex-direction: column;
+  }
+}
+.colPicRight .innerT {
   width: 45%;
   padding: 2% 2%;
   background-color: #3a4454;
 }
-.colPicRight .outer .innerT h2 {
+.colPicRight .innerT h2 {
   font-size: 6rem;
 }
-.colPicRight .outer .innerT p {
+@media (max-width: 820px) {
+  .colPicRight .innerT h2 {
+    font-size: 5rem;
+  }
+}
+.colPicRight .innerT p {
   font-size: 3rem;
 }
-.colPicRight .outer .innerI {
+@media (max-width: 820px) {
+  .colPicRight .innerT p {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 820px) {
+  .colPicRight .innerT {
+    width: 100%;
+  }
+}
+.colPicRight .innerI {
   width: 55%;
   background-color: #3a4454;
 }
+@media (max-width: 820px) {
+  .colPicRight .innerI {
+    width: 80%;
+  }
+}
 .colPicLeft {
-  border-bottom-left-radius: 7%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -242,6 +301,11 @@ footer {
   align-items: center;
   flex-direction: row-reverse;
 }
+@media (max-width: 820px) {
+  .colPicLeft .outer {
+    flex-direction: column;
+  }
+}
 .colPicLeft .outer .innerT {
   width: 50%;
   padding: 2% 2%;
@@ -250,12 +314,33 @@ footer {
 .colPicLeft .outer .innerT h2 {
   font-size: 6rem;
 }
+@media (max-width: 820px) {
+  .colPicLeft .outer .innerT h2 {
+    font-size: 5rem;
+  }
+}
 .colPicLeft .outer .innerT p {
   font-size: 3rem;
+}
+@media (max-width: 820px) {
+  .colPicLeft .outer .innerT p {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 820px) {
+  .colPicLeft .outer .innerT {
+    width: 100%;
+  }
 }
 .colPicLeft .outer .innerI {
   width: 50%;
   background-color: #3a4454;
+}
+@media (max-width: 820px) {
+  .colPicLeft .outer .innerI {
+    width: 80%;
+    padding-bottom: 3%;
+  }
 }
 .threeCol {
   display: flex;
@@ -265,8 +350,18 @@ footer {
   margin: 1% 1%;
   background-color: #3a4454;
 }
+@media (max-width: 820px) {
+  .threeCol {
+    flex-direction: column;
+  }
+}
 .threeCol div {
   width: 32%;
+}
+@media (max-width: 820px) {
+  .threeCol div {
+    width: 80%;
+  }
 }
 .threeCol div h2 {
   font-size: 4rem;
@@ -276,6 +371,11 @@ footer {
 }
 .firstTitle {
   margin-top: 20vh;
+}
+@media (max-width: 820px) {
+  .firstTitle {
+    margin-top: 15vh;
+  }
 }
 .secTitle {
   text-align: center;
@@ -296,10 +396,21 @@ footer {
   align-items: center;
   flex-direction: row;
 }
+@media (max-width: 820px) {
+  .colPicRightA .outer {
+    flex-direction: column-reverse;
+    padding-top: 2%;
+  }
+}
 .colPicRightA .outer .innerT {
   width: 45%;
   padding: 2% 2%;
   background-color: #3a4454;
+}
+@media (max-width: 820px) {
+  .colPicRightA .outer .innerT {
+    width: 80%;
+  }
 }
 .colPicRightA .outer .innerT h2 {
   font-size: 5rem;
@@ -342,10 +453,21 @@ footer {
   align-items: center;
   flex-direction: row-reverse;
 }
+@media (max-width: 820px) {
+  .colPicLeftA .outer {
+    flex-direction: column-reverse;
+    padding-top: 2%;
+  }
+}
 .colPicLeftA .outer .innerT {
   width: 50%;
   padding: 2% 2%;
   background-color: #3a4454;
+}
+@media (max-width: 820px) {
+  .colPicLeftA .outer .innerT {
+    width: 80%;
+  }
 }
 .colPicLeftA .outer .innerT h2 {
   font-size: 6rem;
