--- a/less/main.less
+++ b/less/main.less
@@ -5,54 +5,93 @@
     .flexOuterJAD(space-evenly, center, row);
     margin: 1% 1%;
     margin-top: 20vh;
+    @media @tablet{
+        margin-top: 15vh;
+    }
     margin-bottom: 0%;
     background-color: @outerBox;
     .outer{
         width: 100%;
         .flexOuterJAD(space-around, center, row);
+        @media @tablet{
+            flex-direction: column;
+            
+        }
+        
+
+        }
         .innerT{
             width: 45%;
             padding: 2% 2%;
             background-color: @innerBox;
             h2{
                 font-size: 6rem;
+                @media @tablet{
+                    font-size: 5rem;
+                }
             }
             p{
                 font-size: 3rem;
+                @media @tablet{
+                    font-size: 2rem;
+                }
+            }
+            @media @tablet{
+                width: 100%
             }
         }
         .innerI{
             width: 55%;           
-            background-color: @innerBox;           
+            background-color: @innerBox;
+            @media @tablet{
+                width: 80%;
+                
+            }           
         }
     };
 
-}
+
+
 
 .colPicLeft{
     background-color: @outerBox;
-    border-bottom-left-radius: 7%;
     .flexOuterJAD(space-evenly, center, row-reverse);
     margin: 1% 1%;
     margin-top: 0%;
     background-color: @outerBox;
     .outer{
         width: 100%;
-        .flexOuterJAD(space-around, center, row-reverse);       
+        .flexOuterJAD(space-around, center, row-reverse);
+        @media @tablet{
+            flex-direction: column;
+        }       
         .innerT{
             width: 50%;
             padding: 2% 2%;
             background-color: @innerBox;
             h2{
                 font-size: 6rem;
+                @media @tablet{
+                    font-size: 5rem;
+                }
             }
             p{
                 font-size: 3rem;
+                @media @tablet{
+                    font-size: 2rem;
+                }
+            }
+            @media @tablet{
+                width: 100%
             }
         }
         .innerI{
             width: 50%;            
-            background-color: @innerBox;           
+            background-color: @innerBox;
+            @media @tablet{
+                width: 80%;
+                padding-bottom: 3%;
+            }            
         }
     };
 
@@ -62,8 +101,14 @@
     .flexOuterJAD(space-evenly, center, row);
     margin: 1% 1%;    
     background-color: @outerBox;
+    @media @tablet{
+        flex-direction: column;
+    }
     div{
         width: 32%;
+        @media @tablet{
+               width: 80%;     
+        }
         h2{
             font-size: 4rem;
         }
