--- a/less/about.less
+++ b/less/about.less
@@ -37,6 +37,9 @@
             background-color: @innerBox;
             h2{
                 font-size: 5rem;
+                @media @tablet{
+                    text-align: center;         
+                }
             }
             p{
                 font-size: 3rem;
@@ -90,6 +93,9 @@
             background-color: @innerBox;
             h2{
                 font-size: 6rem;
+                @media @tablet{
+                    text-align: center;         
+                }
             }
             p{
                 font-size: 3rem;
