all ipsum replaced where possible

--- a/less/main.less
+++ b/less/main.less
@@ -98,7 +98,8 @@
 }
 
 .threeCol{
-    .flexOuterJAD(space-evenly, center, row);
+    .flexOuterJAD(space-evenly, flex-start, row);
+    padding: 1%;
     margin: 1% 1%;    
     background-color: @outerBox;
     @media @tablet{
