--- a/css/index.css
+++ b/css/index.css
@@ -345,8 +345,9 @@ footer {
 .threeCol {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
+  padding: 1%;
   margin: 1% 1%;
   background-color: #3a4454;
 }
